change title and adjust image box

--- a/age.html
+++ b/age.html
@@ -9,11 +9,11 @@
 </head>
 <body>
   <div class="heading">
-  <h1>BIRHTDAY CALCULATOR</h1>
+  <h1>AGE CALCULATOR</h1>
   </div>
-  <div class="sub-head js-sub-head">
+  <div class="main js-sub-head">
 <div>
-    <div class="message"><marquee>Plese select your year, month and date of birth below</marquee></div>
+    <div class="message"><marquee>please input your date of birth together with your profile picture from the boxes below. </marquee></div>
     <div class="display-picture js-display-picture"></div>
 <div class="day"> DAY</div>
 <div class="month">MONTH</div>
