--- a/age.html
+++ b/age.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Date of birth calculator</title>
+  <title> Age calculator</title>
   <link rel="stylesheet" href="age.css">
 
 </head>
