remove upload button, add background color on click and also disable negative numbers

--- a/age.html
+++ b/age.html
@@ -13,7 +13,7 @@
   <div class="heading">
     <h1>AGE CALCULATOR</h1>
   </div>
-  <div class="main js-sub-head">
+  <div class="main js-main">
     <div>
       <div class="message">
         <marquee>please input your date of birth together with your profile picture from the boxes below. </marquee>
@@ -133,7 +133,7 @@
       <div>
         <input id = "fileInput" class="js-picture1" type="file" accept="image/*">
         <div class="upload-button">
-          <button class="js-upload-button upload-button2">Upload picture</button>
+          
         </div>
       </div>
 
